# GameEngine

./: .claudiaideconfig  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dependencies.lua  GameEngine.sln  Icon.psd  README.md  VERSIONING.md  generateprojects.bat  premake5.lua
Test/: CMakeLists.txt
Test/Core/: Test.cpp  Types.cpp
Test/env/Internal/InternalTestDirectory/: InternalTestFile.txt
Test/src/Core/: Filesystem.cpp  Types.cpp  UEResult.cpp
Test/src/Platform/Web/: Template.html
UnnamedClient/: CMakeLists.txt  imgui.ini  premake5.lua
UnnamedClient/assets/mods/: test.lua
UnnamedClient/assets/shaders/: chunk.vert  quad.vert  screen.frag
UnnamedClient/src/: UnnamedClient.cpp  UnnamedClientApp.cpp  UnnamedClientApp.h
UnnamedClient/src/Source/: UnnamedClient.cpp  UnnamedClientApp.cpp  UnnamedClientApp.hpp
UnnamedClient/src/World/: Chunk.cpp  Chunk.h  ChunkMesher.cpp  Voxel.h
UnnamedEngine/: CMakeLists.txt  UnnamedEngine.vcxproj  UnnamedEngine.vcxproj.filters  log.txt  premake5.lua
UnnamedEngine/platform/FreeType/: FreeTypeFont.cpp  FreeTypeFont.h  FreeTypeTextAPI.cpp  FreeTypeTextAPI.h
UnnamedEngine/platform/OpenAL/: OpenALSound.cpp  OpenALSound.h  OpenALSoundAPI.cpp  OpenALSoundAPI.h  OpenALSoundListener.cpp  OpenALSoundListener.h  OpenALSoundSource.cpp  OpenALSoundSource.h
UnnamedEngine/platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenglIndexBuffer.cpp  OpenglIndexBuffer.h  OpenglVertexArray.cpp  OpenglVertexArray.h  OpenglVertexBuffer.cpp  OpenglVertexBuffer.h
UnnamedEngine/platform/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImGuiLayer.cpp  VulkanImGuiLayer.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanTexture.cpp  VulkanTexture.h
UnnamedEngine/platform/Windows/: WindowsFileSystem.cpp  WindowsFileSystem.h  windows.h  windowsWindow.cpp  windowsWindow.h
UnnamedEngine/platform/Winsock/: WinsockHelper.cpp  WinsockHelper.h  WinsockNetworkAPI.cpp  WinsockNetworkAPI.h  WinsockSocket.cpp
UnnamedEngine/src/: Application.cpp  EntryPoint.h  UnnamedEngine.h  application.cpp  application.h  core.h  main.cpp  pch.h  uepch.cpp  uepch.h
UnnamedEngine/src/Core/: Application.cpp  Application.h  Assert.h  Base.cpp  Base.h  Bitpacker.cpp  Bitpacker.h  Bitwise.cpp  Bitwise.h  ConfigManager.cpp  ConfigManager.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  GlobalConfig.cpp  GlobalConfig.h  GlobalConfigSerializer.cpp  GlobalConfigSerializer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  LogLua.h  PlatformDetection.h  PlatformUtilities.cpp  PlatformUtilities.h  Timestep.h  Types.h  Window.cpp  Window.h
UnnamedEngine/src/ECS/: Component.cpp  Component.h  Entity.cpp  Entity.h  EntityLua.h  System.cpp  System.h
UnnamedEngine/src/Events/: Event.h  GamepadEvent.h  NetworkEvent.h  RendererEvent.cpp  RendererEvent.h  WindowEvent.h  event.h  keyEvent.h  mouseEvent.h  windowEvent.h
UnnamedEngine/src/ImGui/: ImGuiBuilder.cpp  ImGuiLayer.cpp  ImGuiLayer.h
UnnamedEngine/src/Image/: image.cpp  image.h
UnnamedEngine/src/Input/: GamepadCodes.h  KeyBoard.h  MouseCodes.h  gamePad.h  gamepadCodes.h  keyBoard.h  keyCodes.h
UnnamedEngine/src/Logger/: Logger.cpp  Logger.h
UnnamedEngine/src/Misc/: Utilities.h  utilities.cpp
UnnamedEngine/src/Network/: Client.cpp  Client.h  ClientConnection.cpp  ClientConnection.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  IPEndpoint.cpp  IPEndpoint.h  Message.cpp  Message.h  MessageManager.cpp  MessageManager.h  NetworkAPI.cpp  NetworkAPI.h  NetworkCommand.cpp  NetworkCommand.h  NetworkServer.cpp  NetworkServer.h  Packet.cpp  Packet.h  PacketManager.cpp  PacketManager.h  Server.cpp  Server.h  ServerConnection.cpp  ServerConnection.h  Socket.cpp  Socket.h
UnnamedEngine/src/Platform/: DynamicTree.cpp  DynamicTree.h  Types.h
UnnamedEngine/src/PlatformIndependenceLayer/: DynamicTree.cpp  DynamicTree.h  FileSystem.cpp  FileSystem.h  FileSystemPlatform.cpp  FileSystemPlatform.h  Types.h
UnnamedEngine/src/Renderer/: Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  CameraController.cpp  CameraController.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Primitives.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
UnnamedEngine/src/Scene/: Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
UnnamedEngine/src/Script/: Configuration.cpp  Configuration.h  LuaAPI.cpp  LuaAPI.h  LuaExposer.cpp  LuaExposer.h  LuneExposer.cpp  LuneExposer.h
UnnamedEngine/src/Serialization/: GLMSerialization.cpp  GLMSerialization.h
UnnamedEngine/src/Sound/: Sound.cpp  Sound.h  SoundAPI.cpp  SoundAPI.h  SoundCommand.cpp  SoundCommand.h  SoundListener.cpp  SoundListener.h  SoundSource.cpp  SoundSource.h
UnnamedEngine/src/Source/: Main.cpp  UnnamedEngine.hpp  uepch.cpp  uepch.hpp
UnnamedEngine/src/Time/: Stopwatch.cpp  Stopwatch.h  SystemTime.cpp  SystemTime.h  Timer.cpp  Timer.h  localTime.cpp  localTime.h
UnnamedEngine/src/Window/: Window.h
UnnamedEngine/src/events/: event.h  gamepadEvent.h  keyEvent.h  mouseEvent.h  windowEvent.h
UnnamedEngine/src/image/: image.cpp  image.h
UnnamedEngine/src/input/: gamePad.h  keyBoard.h  mouseCodes.h
UnnamedEngine/src/logger/: logger.cpp  logger.h
UnnamedEngine/src/misc/: utilities.cpp  utilities.h
UnnamedEngine/src/threadpool/: threadpool.h
UnnamedEngine/src/time/: localTime.cpp  localTime.h  timeManager.h
UnnamedEngine/src/window/: window.h
(+337 files in other folders)
